fix(deploy): use multistage build for lighter and cleaner production image

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,11 +1,11 @@
-FROM node:20-alpine
+FROM node:20-alpine AS builder
 
 # Install pnpm
 RUN npm install -g pnpm
 
 WORKDIR /usr/src/app
 
-# Copy package files
+# Copy package files and .npmrc
 COPY package.json pnpm-lock.yaml .npmrc ./
 
 # Install dependencies
@@ -14,8 +14,7 @@ RUN pnpm install --no-frozen-lockfile
 # Copy application source
 COPY . .
 
-# Generate Prisma Client (uses the schema in src/prisma/schema.prisma)
-# We need to set a dummy DATABASE_URL for the generate step if it validates the connection
+# Generate Prisma Client
 ARG DATABASE_URL
 ENV DATABASE_URL="postgresql://dummy:dummy@localhost:5432/dummy"
 RUN ./node_modules/.bin/prisma generate --schema=src/prisma/schema.prisma
@@ -23,7 +22,19 @@ RUN ./node_modules/.bin/prisma generate --schema=src/prisma/schema.prisma
 # Build the application
 RUN pnpm run build
 
+# --- Production Stage ---
+FROM node:20-alpine
+
+WORKDIR /usr/src/app
+
+# Install pnpm
+RUN npm install -g pnpm
+
+# Copy only necessary files from builder
+COPY --from=builder /usr/src/app/node_modules ./node_modules
+COPY --from=builder /usr/src/app/dist ./dist
+COPY --from=builder /usr/src/app/package.json ./package.json
+
 EXPOSE 3000
 
-# Start the application
-CMD ["pnpm", "run", "start:prod"]
+CMD ["node", "dist/main"]
