--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -34,7 +34,8 @@ RUN npm install -g pnpm
 COPY --from=builder /usr/src/app/node_modules ./node_modules
 COPY --from=builder /usr/src/app/dist ./dist
 COPY --from=builder /usr/src/app/package.json ./package.json
+COPY --from=builder /usr/src/app/src/prisma ./src/prisma
 
 EXPOSE 3000
 
-CMD ["/bin/sh", "-c", "./node_modules/.bin/prisma migrate deploy && node dist/main"]
+CMD ["/bin/sh", "-c", "./node_modules/.bin/prisma migrate deploy --schema=src/prisma/schema.prisma && node dist/main"]
